Bug 452865 - Search field not reset after closing "add widget" pop-up
Summary: Search field not reset after closing "add widget" pop-up
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: 5.24.4
Platform: openSUSE Other
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-22 14:22 UTC by tneo
Modified: 2022-04-24 12:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
Browse window (62.46 KB, image/png)
2022-04-22 14:22 UTC, tneo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tneo 2022-04-22 14:22:28 UTC
Created attachment 148301 [details]
Browse window

SUMMARY
The search query used to search for a widget remains active even after closing the pop-up window to search for a widget. There is no way to reset the filter to browse all available widgets.

STEPS TO REPRODUCE
1. Add a widget in the panel, ALT+D,A
2. Click the "Get new widgets" button > Download new
3. Search for a widget by name, e.g. systray
4. Close the pop-up
5. Repeat step 1 & 2

OBSERVED RESULT
The pop-up populated after closing the window is showing my last search results and the filter remains active no matter what you try.

EXPECTED RESULT
The pop-up comes back in the original state, where the user can browse all widgets manually or search for an item.

In the attached screenshot you can see the arrow back is in-active. I have not yet performed a search. The results are from my previous search. It is not populating all values.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220420
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.2
Kernel Version: 5.17.2-1-default (64-bit)
Graphics Platform: X11
Comment 1 Fushan Wen 2022-04-22 16:14:59 UTC
Git commit 02e5a784e72b05fccd1d6fd832fd68a0a41929d9 by Fushan Wen.
Committed on 22/04/2022 at 15:47.
Pushed by merge-service into branch 'master'.

widgetexplorer: Delete newStuffDialog on closed

This resets the search field after the window is closed.
FIXED-IN: 5.24.5

M  +4    -2    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/02e5a784e72b05fccd1d6fd832fd68a0a41929d9
Comment 2 Fushan Wen 2022-04-22 16:43:00 UTC
Git commit ee1cd1ab77119cb9c57af38b297bcad1326daf09 by Fushan Wen.
Committed on 22/04/2022 at 16:19.
Pushed by fusionfuture into branch 'Plasma/5.24'.

widgetexplorer: Delete newStuffDialog on closed

This resets the search field after the window is closed.
FIXED-IN: 5.24.5

(cherry picked from commit 02e5a784e72b05fccd1d6fd832fd68a0a41929d9)

M  +5    -3    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ee1cd1ab77119cb9c57af38b297bcad1326daf09
Comment 3 Fushan Wen 2022-04-24 04:29:55 UTC
Git commit b309aff8c8818e7c60006089b9cd2f1eeae12702 by Fushan Wen.
Committed on 24/04/2022 at 04:17.
Pushed by fusionfuture into branch 'Plasma/5.24'.

Revert "widgetexplorer: Delete newStuffDialog on closed"

This reverts commit ee1cd1ab77119cb9c57af38b297bcad1326daf09.

There will be a crash after the dialog is opened for the second time if
an installation is in progress, because the dialog component is not
deleted after QtQuickDialogWrapper is destructed.

M  +3    -5    components/shellprivate/widgetexplorer/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/b309aff8c8818e7c60006089b9cd2f1eeae12702
Comment 4 Fushan Wen 2022-04-24 12:37:28 UTC
Git commit ba29323362aca128ee725c7d3ad6cd2eea5bb28f by Fushan Wen.
Committed on 24/04/2022 at 03:47.
Pushed by fusionfuture into branch 'master'.

qtquickdialogwrapper: Fix memory leak caused by `QQmlComponent::create`

The created component is not deleted after QtQuickDialogWrapper is
destructed, Set its parent to fix the memory leak.

M  +2    -0    src/qtquickdialogwrapper.cpp

https://invent.kde.org/frameworks/knewstuff/commit/ba29323362aca128ee725c7d3ad6cd2eea5bb28f