widgetexplorer: Delete newStuffDialog on closed

This resets the search field after the window is closed.

BUG: 452865
FIXED-IN: 5.24.5