components/shellprivate/widgetexplorer/widgetexplorer.cpp
@@ -452,10 +452,12 @@ void WidgetExplorer::immutabilityChanged(Plasma::Types::ImmutabilityType type)
 
 void WidgetExplorer::downloadWidgets()
 {
-    if (!d->newStuffDialog) {
+    if (d->newStuffDialog.isNull()) {
         d->newStuffDialog = new KNS3::QtQuickDialogWrapper(QStringLiteral("plasmoids.knsrc"));
+        connect(d->newStuffDialog, &KNS3::QtQuickDialogWrapper::closed, d->newStuffDialog, &QObject::deleteLater);
+
+        d->newStuffDialog->open();
     }
-    d->newStuffDialog->open();
 
     Q_EMIT shouldClose();
 }
